--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -199,7 +199,8 @@ fieldset:not(.polls) {
 				& > label[for*='icon'] {
 					line-height: 32px;
 					img {
-						@include sizing(20px, 20px);
+						max-width: 20px;
+						max-height: 20px;
 						position: relative;
 						top: 4px;
 						display: inline-block;
