--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
@@ -109,14 +109,9 @@
 				}
 				.attach-controls {
 					width: 59%;
-					position: relative;
-					right: -1%;
+					@include position($type: relative, $right: -1%);
 					text-align: right;
 				}
-			}
-			&.attach-comment .inputbox {
-				position: relative;
-				top: 3px;
 			}
 			&.attach-status .file-status {
 				&:before {
