--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
@@ -37,14 +37,10 @@
 
 .darkenwrapper {
 	display: none;
-	position: relative;
-	z-index: 125;
+	@include position($type: relative, $z: 125);
 	.darken {
-		position: fixed;
-		left: 0;
-		top: 0;
+		@include position($type: fixed, $top: 0, $left: 0, $z: 45);
 		@include sizing(100%, 100%);
-		z-index: 45;
 		background: rgba($color-02, 0.50);
 	}
 }
@@ -54,21 +50,14 @@
 
 .phpbb_alert {
 	display: none;
-	position: fixed;
-	top: 150px;
-	right: 30px;
-	left: 30px;
-	z-index: 150;
+	@include position($type: fixed, $top: 150px, $right: 30px, $left: 30px, $z: 150);
 	max-width: 600px;
 	margin: 0 auto;
 	padding: 20px;
 	background: $color-05;
 	border: 1px solid $color-03;
 	.alert_close {
-		position: absolute;
-		top: -10px;
-		right: -10px;
-		z-index: 2;
+		@include position($type: absolute, $top: -10px, $right: -10px, $z: 2);
 		@include sizing(24px, 24px);
 		background: $color-03;
 		border-radius: 100%;
@@ -111,9 +100,7 @@
 
 .scroll-to-top, .scroll-to-bottom {
 	display: block;
-	position: fixed;
-	right: 20px;
-	z-index: -1;
+	@include position($type: fixed, $right: 20px, $z: -1);
 	opacity: 0;
 	visibility: hidden;
 	@include sizing(40px, 40px);
