--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -31,6 +31,11 @@
 		}
 	}
 
+	// other-sections.scss
+	#register fieldset dl dd .group {
+		width: 50%;
+	}
+
 	// cp.scss
 	.cp-menu {
 		flex: 0 0 150px;
@@ -731,6 +736,9 @@
 	}
 
 	// other-sections.scss
+	#register fieldset dl dd .group {
+		margin-top: 10px;
+	}
 	#viewprofile .panel:first-child .inner .left-box {
 		&:not(.profile-details) {
 			border-right: 0;
@@ -1537,6 +1545,9 @@
 	}
 
 	// other-sections.scss
+	#register fieldset dl dd .group {
+		width: auto;
+	}
 	#viewprofile .panel:first-child .inner .left-box.profile-details dd select[name='g'] {
 		width: 100%;
 		& + .button2 {
