Add profile field logic for register and ucp profile, move custom template files, add variable to custom extension, update featured block

--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -12,7 +12,7 @@
 							<h4>Random Content Goes Here</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis.</p>
 						</div>
-						<!-- INCLUDE footer_links.html -->
+						<!-- INCLUDE custom/footer_links.html -->
 						<div class="flex-column has-copyright">
 							<p>Freed from Bhelest's nightmares, the realm of Khy'eras unveiled vast reaches perfect for exploration. Create a character and unlock the land's secrets. Original high fantasy RPG with no word count.</p>
 							<p>
