--- a/khyeras/_dev/ext/javiexin/advancedpf/styles/khyeras_v1/template/profilefields/multisel.html
+++ b/khyeras/_dev/ext/javiexin/advancedpf/styles/khyeras_v1/template/profilefields/multisel.html
@@ -63,7 +63,7 @@
 			{{ _self.display_opt(multisel.options, field_id, magic) }}
 		</div>
 		<div class="group">
-			<span class="group-header">Dragon</span>
+			<span class="group-header">Dragons Only</span>
 			{% set dragon = ['Physical', 'Magical', 'Healing'] %}
 			{{ _self.display_opt(multisel.options, field_id, dragon) }}
 		</div>
