--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -323,6 +323,67 @@
 	}
 }
 
+/* Send Password / Activation Email
+========================================================================== */
+
+.section-ucp-send-password, .section-ucp-send-activation-email {
+	fieldset dl {
+		dt.empty-space + dd {
+			margin-left: 0;
+		}
+		dd.has-multiple-fields.has-space {
+			justify-content: center;
+		}
+	}
+}
+
+/* Registration & UCP - Profile
+========================================================================== */
+
+#register, .section-ucp-edit-profile #ucp {
+	fieldset, .error {
+		.hide-fields {
+			visibility: hidden;
+			opacity: 0;
+			@include position($type: absolute, $top: -9999px, $left: -9999px, $z: -1);
+		}
+	}
+	.error {
+		font-weight: normal;
+		padding: 10px;
+		border-radius: 3px;
+		background: mix(white, $color-11, 80%);
+		&, a {
+			color: $color-08
+		}
+		a:hover {
+			color: $color-07;
+		}
+		.error-msg {
+			display: block;
+		}
+		&.account-type {
+			margin: 0;
+		}
+	}
+	fieldset dl dd {
+		.group {
+			width: 33.33%;
+			margin: 0 -2.5px;
+			padding: 0 $ffs-half;
+			align-self: flex-start;
+			.group-header, label {
+				margin: $ffs $ffs-half 0 $ffs-half;
+			}
+			.group-header {
+				display: block;
+				font-weight: bold;
+				font-size: rem(15px);
+			}
+		}
+	}
+}
+
 /* UCP - Profile
 ========================================================================== */
 
