--- a/khyeras/styles/khyeras_v1/template/custom/header_welcome.html
+++ b/khyeras/styles/khyeras_v1/template/custom/header_welcome.html
@@ -25,7 +25,7 @@
 					</div>
 					<div class="user-information flex-column">
 						{$DISPLAY_TIME}
-						<!-- INCLUDE header_buttons.html -->
+						<!-- INCLUDE custom/header_buttons.html -->
 						<!-- IF S_REGISTERED_USER -->
 							<!-- EVENT navbar_header_user_profile_append -->
 						<!-- ELSE -->
@@ -34,7 +34,7 @@
 					</div>
 					<div class="site-callouts flex-column">
 						<p class="introduction">Freed from Bhelest's nightmares and undead legions, the realm of Khy'eras – called "The Neverend" – unveiled vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. <a class="read-more" href="//google.com">Read more...</a></p>
-						<!-- INCLUDE header_links.html -->
+						<!-- INCLUDE custom/header_links.html -->
 					</div>
 				</div>
 			</div>
