--- a/khyeras/styles/khyeras_v1/template/ucp_register.html
+++ b/khyeras/styles/khyeras_v1/template/ucp_register.html
@@ -18,96 +18,55 @@
 
 <div class="panel">
 	<div class="inner">
+		<h2>{SITENAME} - {L_REGISTRATION}</h2>
 
-	<h2>{SITENAME} - {L_REGISTRATION}</h2>
+		<!-- INCLUDE custom/profile_fields_errors.html -->
 
-	{% if ERROR %}
-		{% set errors = ERROR|split('<br />') %}
-		<p class="error">
-			{% for error in errors %}
-				{% set error_class = '' %}
-				{% if 'too short' in error %}
-					{% set error_class = ' error-msg-too-short' %}
-				{% elseif 'must be completed' in error %}
-					{% set error_class = ' error-msg-required' %}
-				{% elseif 'TOO_FEW' in error %}
-					{% set error_class = ' error-msg-too-few' %}
-				{% elseif 'TOO_MANY' in error %}
-					{% set error_class = ' error-msg-too-many' %}
-				{% endif %}
+		<!-- IF L_REG_COND -->
+			<p><strong>{L_REG_COND}</strong></p>
+		<!-- ENDIF -->
 
-				{% set character_class = '' %}
-				{% if 'Race' in error or 'Class' in error or 'Religion' in error %}
-					{% set character_class = ' error-msg-chracter' %}
-				{% endif %}
+		<fieldset class="fields2">
 
-				<span class="error-msg{{ error_class }}{{ character_class }}">
-					{{ error }}
-				</span>
-			{% endfor %}
-		</p>
-	{% endif %}
+			<!-- EVENT ucp_register_credentials_before -->
+			<dl>
+				<dt><label for="username">{L_USERNAME}{L_COLON}</label><br /><span>{L_USERNAME_EXPLAIN}</span></dt>
+				<dd><input type="text" tabindex="1" name="username" id="username" size="25" value="{USERNAME}" class="inputbox autowidth" title="{L_USERNAME}" /></dd>
+			</dl>
+			<dl>
+				<dt><label for="email">{L_EMAIL_ADDRESS}{L_COLON}</label></dt>
+				<dd><input type="email" tabindex="2" name="email" id="email" size="25" maxlength="100" value="{EMAIL}" class="inputbox autowidth" title="{L_EMAIL_ADDRESS}" autocomplete="off" /></dd>
+			</dl>
+			<dl>
+				<dt><label for="new_password">{L_PASSWORD}{L_COLON}</label><br /><span>{L_PASSWORD_EXPLAIN}</span></dt>
+				<dd><input type="password" tabindex="4" name="new_password" id="new_password" size="25" value="{PASSWORD}" class="inputbox autowidth" title="{L_NEW_PASSWORD}" autocomplete="off" /></dd>
+			</dl>
+			<dl>
+				<dt><label for="password_confirm">{L_CONFIRM_PASSWORD}{L_COLON}</label></dt>
+				<dd><input type="password"  tabindex="5" name="password_confirm" id="password_confirm" size="25" value="{PASSWORD_CONFIRM}" class="inputbox autowidth" title="{L_CONFIRM_PASSWORD}" autocomplete="off" /></dd>
+			</dl>
 
-	<!-- IF L_REG_COND -->
-		<p><strong>{L_REG_COND}</strong></p>
-	<!-- ENDIF -->
+			<!-- EVENT ucp_register_credentials_after -->
+			<hr />
 
-	<fieldset class="fields2">
+			<!-- EVENT ucp_register_options_before -->
 
-	<!-- EVENT ucp_register_credentials_before -->
-	<dl>
-		<dt><label for="username">{L_USERNAME}{L_COLON}</label><br /><span>{L_USERNAME_EXPLAIN}</span></dt>
-		<dd><input type="text" tabindex="1" name="username" id="username" size="25" value="{USERNAME}" class="inputbox autowidth" title="{L_USERNAME}" /></dd>
-	</dl>
-	<dl>
-		<dt><label for="email">{L_EMAIL_ADDRESS}{L_COLON}</label></dt>
-		<dd><input type="email" tabindex="2" name="email" id="email" size="25" maxlength="100" value="{EMAIL}" class="inputbox autowidth" title="{L_EMAIL_ADDRESS}" autocomplete="off" /></dd>
-	</dl>
-	<dl>
-		<dt><label for="new_password">{L_PASSWORD}{L_COLON}</label><br /><span>{L_PASSWORD_EXPLAIN}</span></dt>
-		<dd><input type="password" tabindex="4" name="new_password" id="new_password" size="25" value="{PASSWORD}" class="inputbox autowidth" title="{L_NEW_PASSWORD}" autocomplete="off" /></dd>
-	</dl>
-	<dl>
-		<dt><label for="password_confirm">{L_CONFIRM_PASSWORD}{L_COLON}</label></dt>
-		<dd><input type="password"  tabindex="5" name="password_confirm" id="password_confirm" size="25" value="{PASSWORD_CONFIRM}" class="inputbox autowidth" title="{L_CONFIRM_PASSWORD}" autocomplete="off" /></dd>
-	</dl>
+			<dl>
+				<dt><label for="lang">{L_LANGUAGE}{L_COLON}</label></dt>
+				<dd><select name="lang" id="lang" onchange="change_language(this.value); return false;" tabindex="6" title="{L_LANGUAGE}">{S_LANG_OPTIONS}</select></dd>
+			</dl>
 
-	<!-- EVENT ucp_register_credentials_after -->
-	<hr />
+			<!-- INCLUDE timezone_option.html -->
 
-	<!-- EVENT ucp_register_options_before -->
-	<dl>
-		<dt><label for="lang">{L_LANGUAGE}{L_COLON}</label></dt>
-		<dd><select name="lang" id="lang" onchange="change_language(this.value); return false;" tabindex="6" title="{L_LANGUAGE}">{S_LANG_OPTIONS}</select></dd>
-	</dl>
+			<!-- EVENT ucp_register_profile_fields_before -->
 
-	<!-- INCLUDE timezone_option.html -->
+			<!-- INCLUDE custom/profile_fields.html -->
 
-	<!-- EVENT ucp_register_profile_fields_before -->
-	<!-- IF .profile_fields -->
-		<dl><dd><strong>{L_ITEMS_REQUIRED}</strong></dd></dl>
-
-	<!-- BEGIN profile_fields -->
-		<dl>
-			<dt><label<!-- IF profile_fields.FIELD_ID --> for="{profile_fields.FIELD_ID}"<!-- ENDIF -->>{profile_fields.LANG_NAME}{L_COLON}<!-- IF profile_fields.S_REQUIRED --> *<!-- ENDIF --></label>
-			<!-- IF profile_fields.LANG_EXPLAIN --><br /><span>{profile_fields.LANG_EXPLAIN}</span><!-- ENDIF -->
-			<!-- IF profile_fields.ERROR --><br /><span class="error">{profile_fields.ERROR}</span><!-- ENDIF --></dt>
-			<dd>
-				{profile_fields.FIELD}
-				<!-- IF profile_fields.LANG_NAME == 'Account Type'-->
-					<p class="error account-type">
-						<i class="icon fa-exclamation fa-fw icon-red" aria-hidden="true"></i><strong>Note:</strong> Switching the "Account Type" dropdown during registration may erase any information that is entered, especially for character fields.
-					</p>
-				<!-- ENDIF -->
-			</dd>
-		</dl>
-	<!-- END profile_fields -->
-	<!-- ENDIF -->
-
-	<!-- EVENT ucp_register_profile_fields_after -->
-	</fieldset>
+			<!-- EVENT ucp_register_profile_fields_after -->
+		</fieldset>
 	</div>
 </div>
+
 <!-- IF CAPTCHA_TEMPLATE -->
 	<!-- DEFINE $CAPTCHA_TAB_INDEX = 8 -->
 	<!-- INCLUDE {CAPTCHA_TEMPLATE} -->
@@ -116,10 +75,8 @@
 <!-- IF S_COPPA -->
 <div class="panel">
 	<div class="inner">
-
-	<h4>{L_COPPA_COMPLIANCE}</h4>
-
-	<p>{L_COPPA_EXPLAIN}</p>
+		<h4>{L_COPPA_COMPLIANCE}</h4>
+		<p>{L_COPPA_EXPLAIN}</p>
 	</div>
 </div>
 <!-- ENDIF -->
@@ -128,14 +85,12 @@
 
 <div class="panel">
 	<div class="inner">
-
-	<fieldset class="submit-buttons">
-		{S_HIDDEN_FIELDS}
-		<input type="reset" value="{L_RESET}" name="reset" class="button2" />&nbsp;
-		<input type="submit" tabindex="9" name="submit" id="submit" value="{L_SUBMIT}" class="button1 default-submit-action" />
-		{S_FORM_TOKEN}
-	</fieldset>
-
+		<fieldset class="submit-buttons">
+			{S_HIDDEN_FIELDS}
+			<input type="reset" value="{L_RESET}" name="reset" class="button2" />&nbsp;
+			<input type="submit" tabindex="9" name="submit" id="submit" value="{L_SUBMIT}" class="button1 default-submit-action" />
+			{S_FORM_TOKEN}
+		</fieldset>
 	</div>
 </div>
 </form>
