--- a/khyeras/_dev/styles/khyeras_v1/template/custom/header_featured.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/header_featured.html
@@ -5,37 +5,45 @@
 				<i class="icon rpg-icon rpg-stars-stack" aria-hidden="true"></i>Featured<i class="icon rpg-icon rpg-stars-stack" aria-hidden="true"></i>
 			</h4>
 		</div>
-		<div class="flex-row flex-row-10">
+		<div class="flex-row flex-row-05">
 			<div class="flex-column featured-mvp">
 				<a href="//google.com">
-					<div class="image-wrap">
-						<img src="{T_THEME_PATH}/images/featured-mvp.jpg" alt="MVP" />
+					<div class="featured-content">
+						<div class="image-wrap">
+							<img src="{T_THEME_PATH}/images/featured-mvp.jpg" alt="MVP" />
+						</div>
+						<p>MVP: Deanna DiCorvino</p>
 					</div>
-					<p>MVP: Deanna DiCorvino</p>
 				</a>
 			</div>
 			<div class="flex-column featured-story">
 				<a href="//google.com">
-					<div class="image-wrap">
-						<img src="{T_THEME_PATH}/images/featured-story.jpg" alt="Story" />
+					<div class="featured-content">
+						<div class="image-wrap">
+							<img src="{T_THEME_PATH}/images/featured-story.jpg" alt="Story" />
+						</div>
+						<p>Story: Best Thread Ever</p>
 					</div>
-					<p>Story: Best Thread Ever</p>
 				</a>
 			</div>
 			<div class="flex-column featured-lore">
 				<a href="//google.com">
-					<div class="image-wrap">
-						<img src="{T_THEME_PATH}/images/featured-lore.jpg" alt="Lore" />
+					<div class="featured-content">
+						<div class="image-wrap">
+							<img src="{T_THEME_PATH}/images/featured-lore.jpg" alt="Lore" />
+						</div>
+						<p>Lore: Dragons</p>
 					</div>
-					<p>Lore: Dragons</p>
 				</a>
 			</div>
 			<div class="flex-column featured-event">
 				<a href="//google.com">
-					<div class="image-wrap">
-						<img src="{T_THEME_PATH}/images/featured-event.jpg" alt="Event" />
+					<div class="featured-content">
+						<div class="image-wrap">
+							<img src="{T_THEME_PATH}/images/featured-event.jpg" alt="Event" />
+						</div>
+						<p>Event: It's An Event</p>
 					</div>
-					<p>Event: It's An Event</p>
 				</a>
 			</div>
 		</div>
