Update ext variables, update header script logic, update profile field conditional and markup

--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -17,7 +17,7 @@
 							<p>Freed from Bhelest's nightmares, the realm of Khy'eras unveiled vast reaches perfect for exploration. Create a character and unlock the land's secrets. Original high fantasy RPG with no word count.</p>
 							<p>
 								<a class="button-link" href="//rpgrating.com" target="_blank">
-									<img src="//rpgrating.com/ratings/333.png" alt="Rated 333 from RPGRating.com" title="Rated 333 from RPGRating.com" />
+									<!-- <img src="//rpgrating.com/ratings/333.png" alt="Rated 333 from RPGRating.com" title="Rated 333 from RPGRating.com" /> -->
 								</a>
 							</p>
 							<p class="copyright">
