--- a/khyeras/_dev/styles/khyeras_v1/template/custom/profile_fields.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/profile_fields.html
@@ -1,35 +1,46 @@
-{% if PAGE_TITLE == 'Edit profile' %}
-	{% set FIELD_COMPARE = 'Discord' %}
-{% else %}
-	{% set FIELD_COMPARE = 'Account Type' %}
-{% endif %}
-
-<!-- IF .profile_fields -->
-	</fieldset>
-	<fieldset class="fields2 misc-fields">
-		<h3>Miscellaneous Fields</h3>
-		<p><strong>{L_ITEMS_REQUIRED}</strong></p>
-		<!-- BEGIN profile_fields -->
+{% macro field_groups(fields, check) %}
+	{% for pf in fields %}
+		{% if check == 'character' && 'pf_c_' in pf.FIELD_ID || check == 'misc' && 'pf_c_' not in pf.FIELD_ID %}
 			<dl>
-				<dt><label<!-- IF profile_fields.FIELD_ID --> for="{profile_fields.FIELD_ID}"<!-- ENDIF -->>{profile_fields.LANG_NAME}{L_COLON}<!-- IF profile_fields.S_REQUIRED --> *<!-- ENDIF --></label>
-				<!-- IF profile_fields.LANG_EXPLAIN --><br /><span>{profile_fields.LANG_EXPLAIN}</span><!-- ENDIF -->
-				<!-- IF profile_fields.ERROR --><br /><span class="error">{profile_fields.ERROR}</span><!-- ENDIF --></dt>
-				<dd>
-					{profile_fields.FIELD}
-				</dd>
-				<!-- IF profile_fields.LANG_NAME == 'Account Type'-->
+				<dt>
+					<label{% if pf.FIELD_ID %} for="{{ pf.FIELD_ID }}"{% endif %}>
+						{{ pf.LANG_NAME }}{{ L_COLON }}{% if pf.S_REQUIRED %} *{% endif %}
+					</label>
+					{% if pf.LANG_EXPLAIN %}
+						<br /><span>{{ pf.LANG_EXPLAIN }}</span>
+					{% endif %}
+					{% if pf.ERROR %}
+						<br /><span class="error">{{ pf.ERROR }}</span>
+					{% endif %}
+				</dt>
+				<dd>{{ pf.FIELD }}</dd>
+				{% if pf.LANG_NAME == 'Account Type' %}
 					<dd>
 						<p class="error account-type">
 							<i class="icon fa-exclamation fa-fw icon-red" aria-hidden="true"></i><strong>Note:</strong> Changing the "Account Type" dropdown during registration will erase information that has been entered into "Character" fields.
 						</p>
 					</dd>
-				<!-- ENDIF -->
+				{% endif %}
 			</dl>
-			<!-- IF profile_fields.LANG_NAME == FIELD_COMPARE -->
-				</fieldset>
-				<fieldset class="fields2 character-fields">
-					<h3>Character Fields</h3>
-					<p><strong>{L_ITEMS_REQUIRED}</strong></p>
-			<!-- ENDIF -->
-		<!-- END profile_fields -->
+		{% endif %}
+	{% endfor %}
+{% endmacro %}
+
+{% if PAGE_TITLE == 'Register' %}
+	{% set field_class = 'fields2 ' %}
+{% else %}
+	{% set field_class = '' %}
+{% endif %}
+
+<!-- IF .profile_fields -->
+	<fieldset class="{{ field_class }}misc-fields">
+		<h3>Miscellaneous Fields</h3>
+		<p><strong>{L_ITEMS_REQUIRED}</strong></p>
+		{{ _self.field_groups(profile_fields, 'misc') }}
+	</fieldset>
+	<fieldset class="{{ field_class }}character-fields">
+		<h3>Character Fields</h3>
+		<p><strong>{L_ITEMS_REQUIRED}</strong></p>
+		{{ _self.field_groups(profile_fields, 'character') }}
+	</fieldset>
 <!-- ENDIF -->
